updated dist files

--- a/src/css/stock-chart.css
+++ b/src/css/stock-chart.css
@@ -1,47 +1,1 @@
-.canvas-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  user-select: none; }
-  .canvas-container .resize-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    user-select: none; }
-    .canvas-container .resize-container .stockchart-container {
-      position: absolute;
-      top: 0;
-      right: 85px;
-      bottom: 30px;
-      left: 0; }
-    .canvas-container .resize-container .chart-canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      user-select: none; }
-    .canvas-container .resize-container .yaxis-container {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 30px;
-      width: 85px; }
-    .canvas-container .resize-container .yaxis-canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      user-select: none; }
-    .canvas-container .resize-container .xaxis-container {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      right: 85px;
-      height: 30px; }
-    .canvas-container .resize-container .xaxis-canvas {
-      position: absolute;
-      top: 0;
-      right: 0;
-      user-select: none; }
+.canvas-container,.canvas-container .resize-container{position:absolute;top:0;right:0;bottom:0;left:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.canvas-container .resize-container .stockchart-container{position:absolute;top:0;right:85px;bottom:30px;left:0}.canvas-container .resize-container .chart-canvas{position:absolute;top:0;left:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.canvas-container .resize-container .yaxis-container{position:absolute;top:0;right:0;bottom:30px;width:85px}.canvas-container .resize-container .yaxis-canvas{position:absolute;top:0;left:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.canvas-container .resize-container .xaxis-container{position:absolute;left:0;bottom:0;right:85px;height:30px}.canvas-container .resize-container .xaxis-canvas{position:absolute;top:0;right:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
