--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,8 +20,24 @@
   }
 
   .mw-main {
-    .chart-watchlist-container {
+    .chart-container {
       display: flex;
+      .chat-list {
+        width: 200px;
+        border: 1px dashed red;
+        border-width: 0 1px 1px;
+        .chat-header {
+          display: flex;
+          align-items: center;
+          padding: 0 20px;
+          height: 40px;
+          border: 1px dashed red;
+          border-width: 0 0 1px;        
+          .fa-comment-alt {
+            margin-right: 5px;
+          }
+        }
+      }
       .stock-chart-container {
         flex: 1;
         .stock-chart-settings {
