minor css update

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,7 @@
 
   &__header {
     display: flex;
-    padding: 10px 20px;
+    padding: 10px;
     border: 1px dashed red;
     border-width: 0 0 1px;
     &--size {
