refactored to match nextiva react styles

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
-@import 'vars';
+@import './styles/variables';
 
-@import '../css/normalize.css';
+@import '~normalize-css/normalize.css';
 @import '../css/simplegrid.css';
 @import '../css/main.css';
 
