--- a/src/sass/chart-settings.scss
+++ b/src/sass/chart-settings.scss
@@ -1,10 +1,9 @@
 .settings {
   display: flex;
-  // justify-content: center;
   align-items: center;
   padding: 0 10px;
   border: 1px dashed red;
-  border-width: 0 1px;
+  border-width: 0 1px 0 0;
   .size {
     font-size: 1.7em;
   }
