--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,198 +10,39 @@
   bottom: 0;
   left: 0;
   border: 1px dashed red;
-  border-width: 1px 1px 0;  
-
-  &__header {
-    display: flex;
-    padding: 10px;
-    border: 1px dashed red;
-    border-width: 0 0 1px;
-    &--size {
-      margin: 0;
-    }
-  }
+  border-width: 1px 1px 0;
 
   &__main {
+    bottom: 50px;
     display: flex;
+    position: absolute;
+    top: 50px;
+    width: 100%;
   }
 
   &__analytics {
     flex: 1;
-  }
-
-  .ez-chat {
-    width: 200px;
     border: 1px dashed red;
-    border-width: 0 0 1px;
-    &__header {
-      display: flex;
-      align-items: center;
-      padding: 0 10px;
-      height: 40px;
-      border: 1px dashed red;
-      border-width: 0 0 1px;        
-      .fa-comment-alt {
-        margin-right: 10px;
-      }
-    }
-  }
-
-  .ez-charting {
-    display: flex;
-    &__chart {
-      flex: 1;
-      &--position {
-        position: relative;
-        height: 200px;
-        border: 1px dashed red;
-        border-width: 0 0 1px 1px;
-      }
-    }
-    &__settings {
-      position: relative;
-      display: flex;
-      // justify-content: center;
-      height: 40px;
-      border: 1px dashed red;
-      border-width: 0 0 1px;
-      &--position {
-        position: absolute;
-        left: 20px;
-      }
-    }
-  }
-
-  .watch-list {
-    // padding: 0 20px;
-    width: 200px;
-    border: 1px dashed red;
-    border-width: 0 0 1px 1px;
-    &__header {
-      display: flex;
-      align-items: center;
-      padding: 0 10px;
-      height: 40px;
-      border: 1px dashed red;
-      border-width: 0 0 1px;        
-      .fa-list-alt {
-        margin-right: 10px;
-      }
-    }
+    border-width: 0 0 1px 0;    
+    overflow: auto;
   }
 
   .ez-analytics {
     display: flex;
-    .head-lines {
-      // padding: 0 20px;
-      flex: 1;
-      height: 300px;
-      // width: 300px;
-      border: 1px dashed red;
-      border-width: 0 0 1px 1px;
-      &__header {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px dashed red;
-        border-width: 0 0 1px;        
-        .fa-newspaper {
-          margin-right: 10px;
-          font-size: 1.5em;
-        }
-      }
-    }
-    .profit {
-      // padding: 0 20px;
-      flex: 1;
-      height: 300px;
-      // width: 300px;
-      border: 1px dashed red;
-      border-width: 0 0 1px 1px;
-      &__header {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px dashed red;
-        border-width: 0 0 1px;        
-        .fa-dollar-sign {
-          margin-right: 10px;
-          font-size: 1.5em;
-        }
-      }
-    }
-    .workers {
-      // padding: 0 20px;
-      flex: 1;
-      height: 300px;
-      // width: 300px;
-      border: 1px dashed red;
-      border-width: 0 0 1px 1px;
-      &__header {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px dashed red;
-        border-width: 0 0 1px;        
-        .fa-cubes {
-          margin-right: 10px;
-          font-size: 1.5em;
-        }
-      }
-    }
-    .hash-rate {
-      // padding: 0 20px;
-      flex: 1;
-      height: 300px;
-      // width: 300px;
-      border: 1px dashed red;
-      border-width: 0 0 1px 1px;
-      &__header {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px dashed red;
-        border-width: 0 0 1px;        
-        .fa-hashtag {
-          margin-right: 10px;
-          font-size: 1.5em;
-        }
-      }
-    }
-    .weather {
-      // padding: 0 20px;
-      flex: 1;
-      height: 300px;
-      // min-width: 300px;
-      border: 1px dashed red;
-      border-width: 0 0 1px 1px;
-      &__header {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px dashed red;
-        border-width: 0 0 1px;        
-        .fa-cloud {
-          margin-right: 10px;
-          font-size: 1.5em;
-        }
-      }
-    }
+    flex-wrap: wrap;
   }
 
   &__footer {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    height: 60px;
-    text-align: center;
     border: 1px dashed red;
     border-width: 0 0 1px;
+    bottom: 0;
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    position: absolute;
+    text-align: center;
+    width: 100%;
     .powered-by-link {
       font-size: .8em;
     }
